# retrieve_articles

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-article.yml
config/: interests.yaml
data/: seen_articles.json
src/retrieve_articles/: __init__.py  __main__.py  agent.py  config.py  emailer.py  history.py  interests.py  main.py  models.py
src/retrieve_articles/discover/: __init__.py  arxiv_source.py  hackernews_source.py  rss_source.py
src/retrieve_articles/templates/: daily_email.html
