[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieve-articles"
version = "0.1.0"
description = "Daily curated article agent for data science and AI engineering"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "arxiv>=2.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
retrieve-articles = "retrieve_articles.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
retrieve_articles = ["templates/*.html"]
